@@ -70,6 +70,8 @@ fixes:
 - fixed a bug in search timer announcements concerning the display of the corresponding
   search timer
 - fixed some memory leaks, thanks to Bittor Corl for providing a patch
+- some fixes to compile with gcc-4.4, thanks to firefly@vdrportal for providing a patch
+
 
 2008-04-29: Version 0.9.24
 new:
